Fixed BUG: Login form seem blurred in Chrome

--- a/VinVC/login/static/login/css/style.css
+++ b/VinVC/login/static/login/css/style.css
@@ -28,8 +28,10 @@ body {
 }
 
 #content {
-    margin-top: -20px;
     height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #login-form {
@@ -40,12 +42,7 @@ body {
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     margin-left: 50px;
     border-radius: 3px;
-    z-index: 100;
-    float: right;
     margin-right: 10%;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
 
 }
 
@@ -173,9 +170,7 @@ form button:active:hover {
 }
 
 #text {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    flex-grow: 2;
 }
 
 #text h1 {
